kubernates/ingress/svc-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a
spec:
  selector:
    app: app-a
  ports:
    - port: 80
      targetPort: 3000
