kubernates/ingress/svc-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-b
spec:
  selector:
    app: app-b
  ports:
    - port: 80
      targetPort: 3000
