kubernates/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /app-a
            pathType: Prefix
            backend:
              service:
                name: app-a
                port:
                  number: 80
          - path: /app-b
            pathType: Prefix
            backend:
              service:
                name: app-b
                port:
                  number: 80
